--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 group 'io.flutterfastkit.fk_user_agent'
-version '2.0.0'
+version '2.1.1'
 
 buildscript {
     repositories {
@@ -22,6 +22,9 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    if (project.android.hasProperty("namespace")) {
+        namespace 'io.flutterfastkit.fk_user_agent'
+    }
     compileSdkVersion 30
 
     defaultConfig {
